--- a/AutoSendPic/Resources/Layout/Main.axml
+++ b/AutoSendPic/Resources/Layout/Main.axml
@@ -47,7 +47,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/tvOKCount"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="40dp"
-            android:layout_marginRight="40dp" />
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:gravity="right" />
     </RelativeLayout>
 </LinearLayout>
