--- a/AutoSendPic/Resources/Layout/Main.axml
+++ b/AutoSendPic/Resources/Layout/Main.axml
@@ -3,52 +3,61 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <LinearLayout
-        android:orientation="horizontal"
-        android:minWidth="25px"
-        android:minHeight="25px"
+  <LinearLayout
+      android:orientation="horizontal"
+      android:minWidth="25px"
+      android:minHeight="25px"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/linearLayout1">
+    <Button
+        android:text="フォーカス"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/btnFocus" />
+    <ToggleButton
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/btnToggleFlash"
+        android:textOn="ライトON"
+        android:textOff="ライトOFF" />
+    <ToggleButton
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/btnSendStart"
+        android:textOn="送信ON"
+        android:textOff="送信OFF" />
+    <Button
+        android:text="終了"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/btnExit" />
+  </LinearLayout>
+  <RelativeLayout
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/frameLayout1">
+    <SurfaceView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout1">
-        <Button
-            android:text="フォーカス"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:id="@+id/btnFocus" />
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:id="@+id/btnToggleFlash"
-            android:textOn="ライトON"
-            android:textOff="ライトOFF" />
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:id="@+id/btnSendStart"
-            android:textOn="送信ON"
-            android:textOff="送信OFF" />
-        <Button
-            android:text="終了"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:id="@+id/btnExit" />
-    </LinearLayout>
-    <RelativeLayout
+        android:id="@+id/surfaceView1" />
+    <TextView
+        android:text="OK Count: 0"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/frameLayout1">
-        <SurfaceView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/surfaceView1" />
-        <TextView
-            android:text="OK Count: 0"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvOKCount"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:gravity="right" />
-    </RelativeLayout>
+        android:id="@+id/tvOKCount"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="right" />
+    <TextView
+        android:text="Loc: (None)"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvLocation"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        android:gravity="right" />
+  </RelativeLayout>
 </LinearLayout>
